--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>ZeeZaddy</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Sacramento&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
       <div class="middle-container">
 
         <div class="profile">
-          <img class="fire" src="images/Fire&Ice.png" width="300" height="300" alt="Smoke Photo">
+          <img class="fire" src="images/fire&ice.png" width="300" height="300" alt="Smoke Photo">
           <h2>Hello.</h2>
           <p>I'm a college graduate with a bachelors in psychology. I am learning programming </p>
             <p>to become a future web developer & to get into Ux designer.</p> I like to drink tequila, my dream cars are a Nissian GTR, Audi R8, and Nissian Zed.</p>
