--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body>
 
     <div class="top-contanier">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud">
+      <img class="top-cloud" src="cloud.png" alt="cloud">
       <h1>I'm Zee.</h1>
       <h2><p>a programmer.</p></h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud">
       <img src="images/mountain.png" alt="moutain">
       <div class="middle-container">
 
