--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="middle-container">
 
         <div class="profile">
-          <img class="fire" src="images/fire&ice.png" width="300" height="300" alt="Smoke Photo">
+          <img class="fire" src="clown.gif" width="300" height="300" alt="Smoke Photo">
           <h2>Hello.</h2>
           <p>I'm a college graduate with a bachelors in psychology. I am learning programming </p>
             <p>to become a future web developer & to get into Ux designer.</p> I like to drink tequila, my dream cars are a Nissian GTR, Audi R8, and Nissian Zed.</p>
