--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="middle-container">
 
         <div class="profile">
-          <img class="fire" src="clown.gif" width="300" height="300" alt="Smoke Photo">
+          <img class="fire" src="fire&ice.png" width="300" height="300" alt="Smoke Photo">
           <h2>Hello.</h2>
           <p>I'm a college graduate with a bachelors in psychology. I am learning programming </p>
             <p>to become a future web developer & to get into Ux designer.</p> I like to drink tequila, my dream cars are a Nissian GTR, Audi R8, and Nissian Zed.</p>
@@ -30,7 +30,7 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="clown" src="images/clown.gif" alt="IT clown">
+            <img class="clown" src="clown.gif" alt="IT clown">
            <div class="cosplay">
              <h3>Cosplaying</h3>
            </div>
@@ -39,7 +39,7 @@
           </div>
 
           <div class="skill-row">
-            <img class="kiss" src="images/kisses.gif" width="300" height="300" alt="Peace picture">
+            <img class="kiss" src="kisses.gif" width="300" height="300" alt="Peace picture">
             <div class="continous">
               <h3>Continous learning</h3>
             </div>
