--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>I'm Zee.</h1>
       <h2><p>a programmer.</p></h2>
       <img class="bottom-cloud" src="cloud.png" alt="cloud">
-      <img src="images/mountain.png" alt="moutain">
+      <img src="mountain.png" alt="moutain">
       <div class="middle-container">
 
         <div class="profile">
